--- a/resource_distribution/README.me
+++ b/resource_distribution/README.me
@@ -1,1 +1,2 @@
-
+To examine how the spatial distribution of resources interacts with individual behavior to shape collective foraging decisions,
+we expanded on the ABBAS model.
